--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -19,7 +19,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_CC_STACKPROTECTOR_STRONG=y
+# CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_MODULE_SRCVERSION_ALL=y
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
@@ -438,3 +438,5 @@ CONFIG_NFC=y
 CONFIG_NFC_PN553_19A_DEVICES=y
 CONFIG_MTK_SECURITY_SW_SUPPORT=y
 CONFIG_TASK_DELAY_ACCT=y
+CONFIG_KALLSYMS=y
+CONFIG_KALLSYMS_ALL=y
